[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "chardet==5.2.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "deprecated==1.2.18",
    "dnspython==2.7.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.8",
    "h11==0.14.0",
    "idna==3.10",
    "limits==4.0.1",
    "motor==3.7.0",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pydantic[email]==2.10.6",
    "pydantic-core==2.27.2",
    "pymongo==4.11",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "uvicorn==0.34.0",
    "wrapt==1.17.2",
]
